--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -19,7 +19,7 @@
 </section>
 
 <section class="home-mvp">
-  <div class="container d-flex">
+  <div class="container">
     <h1 class="home-mvp-title">At ECMA Stack, we are experts in building <em>MVPs</em> that are <em>fast, beautiful, and efficient.</em></h1>
     <h2 class="home-mvp-subtitle">Are we the right partner for you? Get in touch and let’s find out.</h2>
 
