--- a/app/templates/work.hbs
+++ b/app/templates/work.hbs
@@ -9,7 +9,7 @@
   </div>
 </section>
 
-<section class="home-section container d-flex home-our-process">
+<section class="home-section container home-our-process">
   <h2 class="section-title text-md-center">Software and App Development Services</h2>
 
   <article class="process-block right-bubble row">
