--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<section class="home-section container d-flex home-our-process">
+<section class="home-section container home-our-process">
   <h2 class="section-title text-md-center">Software and App Development Services</h2>
 
   <article class="process-block right-bubble row">
