--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@ $grey: #9BA9BF;
 $blue: #0088FF;
 $black: #1F2A3E;
 $pink: #E22A70;
+$red-pink: #EB4452;
 $aqua: #F5FAFF;
 
 // Predefined Break-points
