--- a/app/templates/components/header-hero-home.hbs
+++ b/app/templates/components/header-hero-home.hbs
@@ -1,18 +1,18 @@
 <div class="home-hero">
-  <div class="container d-flex home-hero-content">
-    <div class="col-md-7 home-intro col-sm-12">
-      <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
-      <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
-      <button class="btn">Let’s Get in Touch</button>
-    </div>
-    <div class="col-md-5 home-rocket hidden-sm-down">
-      <img src="/images/react-icon.svg" width="31" class="lib-icons react-icon" />
-      <img src="/images/angular-icon.svg" width="30" class="lib-icons angular-icon" />
-      <img src="/images/js-icon.svg" width="31" class="lib-icons js-icon" />
-      <img src="/images/node-icon.png" width="39" class="lib-icons node-icon" />
-      <img src="/images/redux-icon.png" width="32" class="lib-icons redux-icon" />
-      <img src="/images/graphql-icon.svg" width="30" class="lib-icons graphql-icon" />
-      <img src="/images/home-rocket.png" width="35%" class="home-rocket-img" alt="JavaScript development company" />
+  <div class="container-fluid d-flex home-hero-content">
+    <div class="row justify-content-between">
+      <div class="col-md-6 home-intro col-sm-12">
+        <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
+        <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
+        <button class="btn">Let’s Get in Touch</button>
+      </div>
+      <div class="col-md-5 home-rocket hidden-sm-down">
+        <div class="lib-icon angular"></div>
+        <div class="lib-icon react"></div>
+        <div class="lib-icon node"></div>
+        <div class="lib-icon meteor"></div>
+        <img src="/images/home-rocket.png" width="35%" class="home-rocket-img" alt="JavaScript development company" />
+      </div>
     </div>
   </div>
 </div>
