--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,10 +1,10 @@
 .header {
-  padding: 40px 0;
-  background: #212a3d;
-  background: -moz-linear-gradient(-45deg, #212a3d 0%, #273555 44%, #1c89ff 100%);
-  background: -webkit-linear-gradient(-45deg, #212a3d 0%,#273555 44%,#1c89ff 100%);
-  background: linear-gradient(135deg, #212a3d 0%,#273555 44%,#1c89ff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#212a3d', endColorstr='#1c89ff',GradientType=1 );
+  padding: 56px 60px 73px;
+  background: #273555;
+  background: -moz-linear-gradient(-35deg,  #273555 0%, #292d46 18%, #25293d 33%, #292d46 40%, #1c87fb 100%);
+  background: -webkit-linear-gradient(-35deg,  #273555 0%,#292d46 18%,#25293d 33%,#292d46 40%,#1c87fb 100%);
+  background: linear-gradient(125deg,  #273555 0%,#292d46 18%,#25293d 33%,#292d46 40%,#1c87fb 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#273555", endColorstr="#1c87fb",GradientType=1 );
 }
 
 .home-header {
