--- a/app/templates/components/header-hero-home.hbs
+++ b/app/templates/components/header-hero-home.hbs
@@ -6,12 +6,14 @@
         <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
         <button class="btn">Let’s Get in Touch</button>
       </div>
-      <div class="col-md-5 home-rocket hidden-sm-down">
-        <div class="lib-icon angular"></div>
-        <div class="lib-icon react"></div>
-        <div class="lib-icon node"></div>
-        <div class="lib-icon meteor"></div>
-        <img src="/images/home-rocket.png" width="35%" class="home-rocket-img" alt="JavaScript development company" />
+      <div class="col-md-5 hidden-sm-down home-rocket-wrapper">
+        <div class="home-rocket">
+          <div class="lib-icon angular"></div>
+          <div class="lib-icon react"></div>
+          <div class="lib-icon node"></div>
+          <div class="lib-icon meteor"></div>
+          <img src="/images/home-rocket.png" width="35%" class="home-rocket-img" alt="JavaScript development company" />
+        </div>
       </div>
     </div>
   </div>
