--- a/app/templates/components/footer-global.hbs
+++ b/app/templates/components/footer-global.hbs
@@ -4,16 +4,38 @@
     <h2 class="footer-heading-2">and available for face to face meetings in the city or in CT.</h2>
   </div>
 
-  <div class="footer-home-callto-action container d-flex">
-    <div class="col-md-6">
-      <h1 class="bottom-cta-title">
-        Let's Make Something<br>
-        <em>Amazing Together</em>
-      </h1>
+  <div class="footer-icon">
+    <div class="left-part">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
-    <div class="col-md-6">
-      <p class="bottom-cta-paragraph">Looking to build a new web or mobile app, scale your technology, improve your customer’s online shopping experience, integrate with other systems or overcome unique business challenges?</p>
-      <a href="/" class="btn">Let's talk</a>
+    <div class="right-part">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+  </div>
+
+  <h2 class="footer-heading-3">We are also available for chat at</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="meetup-name">Northeast Javascript Conference</div>
+        <div class="meetup-place">Stampford</div>
+      </div>
+      <div class="col-md-3">
+        <div class="meetup-name">Fluent</div>
+        <div class="meetup-place">San Jose</div>
+      </div>
+      <div class="col-md-3">
+        <div class="meetup-name">Meteor Meetup</div>
+        <div class="meetup-place">New York City</div>
+      </div>
+      <div class="col-md-3">
+        <div class="meetup-name">WordPress Meetup</div>
+        <div class="meetup-place">Stampford</div>
+      </div>
     </div>
   </div>
 </section>
