--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -18,6 +18,10 @@
     {{header-hero-home}}
   {{/if}}
 
+  {{#if (is-equal route 'services')}}
+    {{header-hero-services}}
+  {{/if}}
+
   {{#if (is-equal route 'work')}}
     {{header-hero-work}}
   {{/if}}
