--- a/app/templates/components/header-hero-home.hbs
+++ b/app/templates/components/header-hero-home.hbs
@@ -1,5 +1,5 @@
 <div class="home-hero">
-  <div class="container-fluid d-flex home-hero-content">
+  <div class="container-fluid home-hero-content">
     <div class="row justify-content-between">
       <div class="col-md-6 home-intro col-sm-12">
         <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
